# Vulkan-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Application.h  Backend.h  Camera.h  CubeMap.h  Helper.h  Mesh.h  Model.h  TriangleRenderer.h  VertexBuffer.h  util.h
src/: Application.cpp  Backend.cpp  CMakeLists.txt  Camera.cpp  CubeMap.cpp  GraphicsPipeline.cpp  Helper.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  TriangleRenderer.cpp  VertexBuffer.cpp  main.cpp
src/shaders/: geometryPass.frag  lightingPass.comp  test.frag  test.vert  toneMappingPass.frag  toneMappingPass.vert
